manifest/1.namespaces.yml
apiVersion: v1

kind: Namespace

metadata: 
  name: todo-app
  labels:
    environment: development
