manifest/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata: 
  namespace: dev-todo
  name: frontend-todoui

spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1 
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: nginx:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports: 
            - containerPort: 80
          volumeMounts: 
            - name: todoui-storage
              mountPath: /data
      volumes: 
        - name: todoui-storage
          persistentVolumeClaim: 
            claimName: stgclass-todopvc
