manifest/firfox.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: dev-todo
  name: firefox-todo
  labels:
    app: frontend
spec:
  containers:
  - name: myapp
    image: linuxserver/firefox
    ports:
      - containerPort: 3000
