manifest/3.service.yml
apiVersion: v1

kind: Service

metadata:
  namespace: todo-app
  name: todo-frontend-service

spec:
 type: ClusterIP

 selector: 
   app: todo-frontend

 ports:
   - protocol: TCP
     port: 80
     targetPort: 80
