manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todoui-svc
  namespace: dev-todo

spec:
 type: ClusterIP

 selector: 
   app: frontend

 ports:
   - protocol: TCP
     port: 80
     targetPort: 80
