manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: todo-ingress
  namespace: dev-todo
  annotations:
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"

spec:
  ingressClassName: azure-application-gateway

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todoui-svc
                port:
                  number: 80
